tests/eval/bad/string_error1.scilexp
let s = "abc" in
let t = "def in
s
